[package]
name = "todoapp_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.40.0", features = ["full"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
validator = { version = "0.18.1", features = ["derive"] }
dotenvy = "0.15.7"
envy = "0.4.2"
sqlx-cli = "0.8.2"
sqlx = { version = "0.8.2", features = [
  "runtime-tokio-rustls",
  "postgres",
  "uuid",
] }
once_cell = "1.20.2"
anyhow = "1.0.91"
thiserror = "1.0.65"
