[package]
name = "todoapp_rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "todoapp_rs"
path = "src/lib.rs"

[[bin]]
name = "todoapp_rs"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.40.0", features = ["full"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
validator = { version = "0.18.1", features = ["derive"] }
dotenvy = "0.15.7"
envy = "0.4.2"
sqlx-cli = "0.8.2"
sqlx = { version = "0.8.2", features = [
  "runtime-tokio-rustls",
  "postgres",
  "uuid",
] }
once_cell = "1.20.2"
anyhow = "1.0.91"
thiserror = "1.0.65"
axum = "0.7.7"
log = "0.4.22"
tower = "0.5.1"
tower-http = { version = "0.6.1", features = ["trace", "timeout"] }
env_logger = "0.11.5"
sea-orm = { version = "1.1.0", features = [
  "sqlx-postgres",
  "runtime-tokio-native-tls",
  "macros",
] }
bcrypt = "0.15.1"
ulid = "1.1.3"
jsonwebtoken = "9.3.0"
base64 = "0.22.1"
redis = { version = "0.27.5", features = [
  "tokio-comp",
  "tokio-native-tls-comp",
] }
